[package]
name = "tuner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
async-trait = "0.1"
futures = "0.3"
nix = { version = "0.27", features = ["fs", "process", "term", "signal"] }
teloxide = { version = "0.12", default-features = false, features = ["macros", "rustls"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
regex = "1.10"
html-escape = "0.2"
cron = "0.12"

[dev-dependencies]
tempfile = "3.10"
filetime = "0.2"

