[package]
name = "tuner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
async-trait = "0.1"
futures = "0.3"
nix = { version = "0.27", features = ["fs", "process", "term", "signal"] }
teloxide = { version = "0.12", default-features = false, features = ["macros", "rustls"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
regex = "1.10"
html-escape = "0.2"
cron = "0.12"
filetime = "0.2"
toml = "0.8"

axum = { version = "0.7", features = ["ws", "multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
crypto_box = { version = "0.9", features = ["serde"] }
subtle = "2.5"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
base64 = "0.22"
mime_guess = "2.0"
rand = "0.8"
anyhow = "1.0"
matrix-sdk = "0.18.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
url = "2.5"



[dev-dependencies]
tempfile = "3.10"
tower = { version = "0.4", features = ["util"] }


